// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReactionList should render left aligned ReactionList 1`] = `
<View
  alignment="left"
  style={
    Array [
      Object {
        "alignSelf": "flex-start",
        "height": 28,
        "left": -10,
        "position": "relative",
        "zIndex": 10,
      },
    ]
  }
  testID="reaction-list"
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "height": 24,
          "paddingHorizontal": 5,
          "zIndex": 1,
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "flexDirection": "row",
          },
        ]
      }
    >
      <Text
        testID="sad"
      >
        😔
      </Text>
      <Text
        testID="haha"
      >
        😂
      </Text>
      <Text
        testID="like"
      >
        👍
      </Text>
    </View>
    <Text
      reactionCounts={5}
      style={
        Array [
          Object {
            "color": "white",
            "fontSize": 12,
          },
        ]
      }
    >
      5
    </Text>
  </View>
  <View
    style={
      Array [
        Object {
          "flexDirection": "row",
          "top": -23,
        },
      ]
    }
  >
    <Image
      source={
        Object {
          "testUri": "../../../src/images/reactionlist/left-tail.png",
        }
      }
      style={
        Array [
          Object {
            "height": 33,
            "width": 25,
          },
        ]
      }
    />
    <Image
      resizeMode="stretch"
      source={
        Object {
          "testUri": "../../../src/images/reactionlist/left-center.png",
        }
      }
      style={
        Array [
          Object {
            "flexBasis": 0,
            "flexGrow": 1,
            "flexShrink": 1,
            "height": 33,
          },
        ]
      }
    />
    <Image
      source={
        Object {
          "testUri": "../../../src/images/reactionlist/left-end.png",
        }
      }
      style={
        Array [
          Object {
            "height": 33,
            "width": 14,
          },
        ]
      }
    />
  </View>
</View>
`;

exports[`ReactionList should render not visible ReactionList 1`] = `
<View
  style={
    Array [
      Object {
        "alignSelf": "flex-end",
        "height": 28,
        "position": "relative",
        "right": -10,
        "zIndex": 10,
      },
    ]
  }
  testID="reaction-list"
/>
`;

exports[`ReactionList should render right aligned ReactionList 1`] = `
<View
  alignment="right"
  style={
    Array [
      Object {
        "alignSelf": "flex-end",
        "height": 28,
        "position": "relative",
        "right": -10,
        "zIndex": 10,
      },
    ]
  }
  testID="reaction-list"
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "height": 24,
          "paddingHorizontal": 5,
          "zIndex": 1,
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "flexDirection": "row",
          },
        ]
      }
    >
      <Text
        testID="sad"
      >
        😔
      </Text>
      <Text
        testID="haha"
      >
        😂
      </Text>
      <Text
        testID="like"
      >
        👍
      </Text>
    </View>
    <Text
      reactionCounts={5}
      style={
        Array [
          Object {
            "color": "white",
            "fontSize": 12,
          },
        ]
      }
    >
      5
    </Text>
  </View>
  <View
    style={
      Array [
        Object {
          "flexDirection": "row",
          "top": -23,
        },
      ]
    }
  >
    <Image
      source={
        Object {
          "testUri": "../../../src/images/reactionlist/right-end.png",
        }
      }
      style={
        Array [
          Object {
            "height": 33,
            "width": 14,
          },
        ]
      }
    />
    <Image
      resizeMode="stretch"
      source={
        Object {
          "testUri": "../../../src/images/reactionlist/right-center.png",
        }
      }
      style={
        Array [
          Object {
            "flexBasis": 0,
            "flexGrow": 1,
            "flexShrink": 1,
            "height": 33,
          },
        ]
      }
    />
    <Image
      source={
        Object {
          "testUri": "../../../src/images/reactionlist/right-tail.png",
        }
      }
      style={
        Array [
          Object {
            "height": 33,
            "width": 25,
          },
        ]
      }
    />
  </View>
</View>
`;
